browser/css/jsdialogs.css
/* ... */
/* Insert - Line - Sidebar - Arrow Styles */
#floating_line_end_iconview.ui-iconview.jsdialog {
	grid-template-columns: 1fr 1fr;
}

/* Insert - Line - Sidebar - Line Style */
/* Insert - Line - Sidebar - Arrow Styles */
#floating_line_style_iconview.ui-iconview.jsdialog,
#floating_line_end_iconview.ui-iconview.jsdialog {
	font-size: 0; /* Hide placeholder text to prevent layout shifts due to lazy loading */
}

:is(#floating_line_style_iconview, #floating_line_end_iconview, #line_iconview).ui-iconview .ui-iconview-entry {
	border: 1px solid transparent !important; /* Prevents layout shift by reserving space for the border on hover */
}

/* Select Chart - Sidebar - Edit Object - Colors */
:is(#colorful_palettes, #monochromatic_palettes) .ui-iconview-entry {
	border: 1px solid transparent;
}

/* Calc - Insert - Chart - Chart Wizard(Data series) */

#CHART2_HID_SCH_WIZARD_ROADMAP #tp_DataSource #box1.jsdialog.ui-grid-cell {
	align-items: start;
}

#CHART2_HID_SCH_WIZARD_ROADMAP #tp_DataSource #grid2 :is(#box5, #box6) {
	align-items: center;
}

/* Calc - Insert - Chart - Chart Wizard */
#subtype_iconview.jsdialog.ui-iconview {
	grid-template-columns: repeat(4, 1fr);
	overflow: visible;
}

#CHART2_HID_SCH_WIZARD_ROADMAP.vertical.jsdialog label {
	width: max-content;
}

/* Listbox UI grid */
.jsdialog.ui-grid[role='listbox']:not(:has(> .ui-iconview)) {
	max-height: 99vh;
}

.jsdialog.ui-grid[role='listbox'] {
	overflow-x: hidden;
	overflow-y: auto;
	scrollbar-width: var(--scrollbar-width);
	scrollbar-color: var(--scrollbar-color);
}

/* Writer - Form - Properties(Dropdown) */
#ContentControlDialog #tabindexlabel {
	width: max-content;
}

/* Prevents adding empty space on top of tabpages */
/* i.e Writer - Format - Page Style */
.single-child-grid {
	align-self: start;
}

/* Apply label styling to static text for consistent appearance */
.static-label {
	margin: auto 0px;
	color: var(--color-main-text);
	font-size: var(--default-font-size);
	line-height: var(--default-height);
	padding-left: inherit;
}

#sheets-buttons-toolbox #sheetlist.menubutton:hover {
	border: 1px solid var(--color-btn-border);
	background-color: var(--color-background-tabs-group);
}

#sheetlist-entries .ui-combobox-entry.selected span {
	background-color: rgba(var(--doc-type)) !important;
	color: var(--color-primary-text) !important;
	border: 1px solid rgba(var(--doc-type)) !important;
}

#sheets-buttons-toolbox #sheetlist.menubutton {
	padding: 0;
	margin: 0;
	box-sizing: inherit;
}

#sheetlist .arrowbackground {
	display: none;
}

#sheets-buttons-toolbox #sheetlist-button img {
	margin-inline-end: 0;
}

div [id^='themeview'] {
	grid-template-columns: 1fr 1fr;
	width: 420px;
}
div [id^='themeview1col'] {
	grid-template-columns: 1fr;
	width: 220px;
}

div [id^='themeview'].ui-iconview-entry, div [id^='themeview1col'].ui-iconview-entry {
	width: 200px;
	height: 146px
}

#SpecialCharactersDialog #showcharset.jsdialog.ui-iconview {
	grid-template-columns: repeat(16, 1fr);
}

/* Writer - Select Table Cell - Sidebar - Table - Miscellaneous - Border */
#borders.ui-iconview.one-child-popup {
	grid-template-columns: repeat(4, 1fr);
}

/* Calc - Format Cells - Borders - Line - Style */
#iconview_lines.ui-iconview {
	grid-template-columns: repeat(1, 1fr);
}

/* Writer - References - Table of Content... - Entries - Level */
#TocDialog #entries #box1 span.ui-text {
	font-weight: bold;
}

#imSetInsMode {
	content: url('images/queryinsmode.svg');
}

#ManageStylePage #box1 #desc {
	display: block;
}

